# bazel-cmake-grpc-example

./: .bazelrc  .gitignore  .gitmodules  CMakeLists.txt  MODULE.bazel  Makefile  README.MD  WORKSPACE
cmake/: grpc.cmake
cmake/obsolete/: CMakeLists.txt
src/client/: main.cpp
src/client_go/: BUILD  CMakeLists.txt
src/lib_grpc/: BUILD  CMakeLists.txt  rpc.proto
src/server/: BUILD  CMakeLists.txt  main.cpp
